# projectino

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  deny.toml  docker-compose.yml
.github/workflows/: ci.yml
crates/api/: Cargo.toml
crates/api/src/: config.rs  lib.rs  main.rs
crates/cold-consumer/: Cargo.toml
crates/cold-consumer/src/: config.rs  lake.rs  lib.rs  main.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  envelope.rs  events.rs  lib.rs  symbol.rs  topics.rs
crates/hot-consumer/: Cargo.toml
crates/hot-consumer/src/: config.rs  lib.rs  main.rs  translate.rs
crates/hot-consumer/src/module_bindings/: live_book_ticker_table.rs  live_book_ticker_type.rs  live_kline_second_table.rs  live_kline_second_type.rs  live_kline_table.rs  live_kline_type.rs  live_trade_table.rs  live_trade_type.rs  mod.rs  record_book_ticker_reducer.rs  record_kline_reducer.rs  record_kline_second_reducer.rs  record_trade_reducer.rs
crates/ingestor/: Cargo.toml
crates/ingestor/src/: backoff.rs  config.rs  decode.rs  handler.rs  lib.rs  main.rs
crates/ingestor/tests/: replay.rs
crates/ingestor/tests/fixtures/malformed/: README.md  stream.ndjson
crates/ingestor/tests/fixtures/normal-trading/: README.md  stream.ndjson
crates/spacetime-module/: Cargo.toml
crates/spacetime-module/src/: lib.rs
frontend/: .env.example  bunfig.toml  index.html  package.json  tsconfig.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: CandleChart.tsx
frontend/src/lib/: api.ts  candles.ts  intervals.ts  spacetime.ts
frontend/src/module_bindings/: index.ts  live_book_ticker_table.ts  live_kline_second_table.ts  live_kline_table.ts  live_trade_table.ts  record_book_ticker_reducer.ts  record_kline_reducer.ts  record_kline_second_reducer.ts  record_trade_reducer.ts  types.ts
frontend/src/module_bindings/types/: reducers.ts
scripts/: test-ingestor.sh
