[workspace]
resolver = "3"
members = [
    "crates/common",
    "crates/ingestor",
    "crates/hot-consumer",
    "crates/cold-consumer",
    "crates/api",
    "crates/spacetime-module",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

# Versions checked against crates.io on 2026-07-03; newest stable release at
# least two weeks old at that date (supply-chain caution).
# arrow/parquet/object_store are pinned to the exact versions datafusion 54
# depends on — bump them together with datafusion.
[workspace.dependencies]
common = { path = "crates/common" }

anyhow = "1.0.102"
arrow = "58.3.0"
axum = "0.8.9"
datafusion = "54.0.0"
dotenvy = "0.15.7"
log = "0.4.32"
object_store = { version = "0.13.2", features = ["aws"] }
parquet = "58.3.0"
rdkafka = { version = "0.39.0", features = ["cmake-build"] }
rust_decimal = { version = "1.42.1", features = ["serde-with-str"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
spacetimedb = "2.6.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "net", "time"] }
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
