[workspace]
resolver = "3"
members = [
    "crates/common",
    "crates/ingestor",
    "crates/hot-consumer",
    "crates/cold-consumer",
    "crates/api",
    "crates/spacetime-module",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false
# MSRV: deliberately the toolchain this workspace is actually built and tested
# with (CI pins it in the matrix) — not an untested lower claim.
rust-version = "1.96"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = "warn"

# Versions checked against crates.io on 2026-07-03; newest stable release at
# least two weeks old at that date (supply-chain caution).
# arrow/parquet/object_store are pinned to the exact versions datafusion 54
# depends on — bump them together with datafusion.
#
# All versions below use `=` (exact) requirements rather than semver ranges.
# A caret range let the resolver silently pick spacetimedb 2.6.1 (released
# 2026-07-01, 3 days before this pin was checked) instead of the 2.6.0 we
# verified — exact pins plus the committed Cargo.lock mean a version bump
# now requires a deliberate Cargo.toml edit instead of a silent drift.
[workspace.dependencies]
common = { path = "crates/common" }

anyhow = "=1.0.102"
arrow = "=58.3.0"
axum = "=0.8.9"
datafusion = "=54.0.0"
dotenvy = "=0.15.7"
futures-util = { version = "=0.3.32", default-features = false }
log = "=0.4.32"
object_store = { version = "=0.13.2", features = ["aws"] }
parquet = "=58.3.0"
rdkafka = { version = "=0.39.0", features = ["cmake-build"] }
# Explicit crypto-provider backend for rustls 0.23+: tokio-tungstenite's
# `rustls-tls-webpki-roots` feature pulls in rustls but does not select a
# crypto backend, which panics at first TLS handshake with "Could not
# automatically determine the process-level CryptoProvider" unless one of
# rustls's `ring`/`aws-lc-rs` features is enabled and installed at startup.
rustls = { version = "=0.23.41", default-features = false, features = ["ring", "std", "tls12"] }
rust_decimal = { version = "=1.42.1", features = ["serde-with-str"] }
serde = { version = "=1.0.228", features = ["derive"] }
# raw_value: the ingestor routes combined-stream frames without re-parsing payloads
serde_json = { version = "=1.0.150", features = ["raw_value"] }
spacetimedb = "=2.6.0"
thiserror = "=2.0.18"
tokio = { version = "=1.52.3", features = ["macros", "rt-multi-thread", "net", "time", "signal"] }
tokio-tungstenite = { version = "=0.29.0", features = ["rustls-tls-webpki-roots"] }
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.23", features = ["env-filter"] }
