[package]
name = "cold-consumer"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
common = { workspace = true }
object_store = { workspace = true }
rdkafka = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
