[package]
name = "hot-consumer"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
common = { workspace = true }
rdkafka = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
spacetimedb-sdk = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
